[package]
name = "hast"
description = "an HTML pretty-printer"
version = "0.1.0"
edition = "2021"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
license = "MIT"
repository = "https://github.com/malobre/hast"
readme = "README.md"
keywords = ["html", "pretty"]
include = ["src/**/*", "Cargo.toml", "LICENSE"]

[dependencies]
anyhow = "1.0.53"
nom = "7.1.0"
pretty = "0.11.2"
serde = { version = "1.0.136", optional = true, features = ["derive"] }

[dev-dependencies]
similar = "2.1.0"
